--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./build/index.ts",
-    "build": "tsc -p",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.ts",  
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
