--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.ts",  
+    "start": "node dist/index.js",  
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
